# AlgorytmySzeregowania

./: CMakeLists.txt
data/: sched1.in  sched1.out_0_1  sched1.out_0_2  sched1.test  sched2.in  sched2.out_3_2_2  sched2.test  sched3.in  sched3.out_4_2_2  sched4.in
inc/: Core.hpp  FCFSScheduler.hpp  NonPreemPriorityFCFSScheduler.hpp  PriorityFCFSScheduler.hpp  PrioritySRTFScheduler.hpp  Process.hpp  RRScheduler.hpp  SJFScheduler.hpp  SRTFScheduler.hpp  Scheduler.hpp
linefeeder_v2/: data  delayer.sh  linefeeder.cpp  repeater.cpp
src/: main.cpp
